syntax="proto3";

package ProtobufProto.Model;

import "google/protobuf/Any.proto";

// //请求类型
// enum RequestTypes{
//     Heart=0;
// }

// //操作类型
// enum ActionTypes{
//     Regester=0;
//     Login=1;
//     Logout=2;
// }

//数据请求
message Request{
    string Controller=1;
    string Action=2;
    google.protobuf.Any SubRequest=3;
}

//注册请求
message RegistrRequest{
    string Account=1;
    string Password=2;
}

//登录请求
message LoginRequest{
    string Account=1;
    string Password=2;
}